--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>this is my first webpage</h1>
-<h2>Fredrick Muchila</h2>
+<h2>Fredrick Muchila Muchila</h2>
 
 </body>
 </html>
