--- a/Tables1.html
+++ b/Tables1.html
@@ -6,8 +6,8 @@
         table, th,td{
             border: 1px solid black;
         }
-    <title>StudentRecords</title>
-        <p><p/>
+    <title>"StudentRecords"</title>
+        <p></p>
     </style>
 </head>
 <body>
