--- a/Tables1.html
+++ b/Tables1.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <style>
-        table, th,td{
+        table, th,td {
             border: 1px solid black;
-        }
-    <title>"StudentRecords"</title>
+                        }
+    <title>Student Records</title>
     </style>
 </head>
 <body>
