--- a/Tables1.html
+++ b/Tables1.html
@@ -2,34 +2,41 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <h1>CV</h1>
     <style>
-        table, th,td {
+        table th,td {
             border: 1px solid black;
-                        }
-    <title>Student Records</title>
+        }
+        1table th, td
     </style>
 </head>
 <body>
+<h3>My Details</h3>
 <table style="width:80%">
     <tr>
-        <th>Student Name</th>
-        <th>Student-ID</th>
-        <th>Course Major</th>
+        <th>Course Name</th>
+        <th>Course code</th>
+        <th>Mode of Study</th>
     </tr>
     <tr>
-        <td>Michael</td>
-        <td>YB4545</td>
-        <td>Oil And Gas</td>
+        <td>Web Development</td>
+        <td>CMM</td>
+        <td>Full-Time</td>
     </tr>
     <tr>
-        <td>Markus</td>
-        <td>YB1520</td>
         <td>Network Security</td>
+        <td>CMM</td>
+        <td>Full-Time</td>
     </tr>
     <tr>
-        <td>Roger</td>
-        <td>YB1201</td>
-        <td>Civil Engineering</td>
+        <td>CCNA</td>
+        <td>CMM613</td>
+        <td>Full-Time</td>
+    </tr>
+    <tr>
+        <td>Professional Development and Reserch Skill</td>
+        <td>CMM507</td>
+        <td>Full-Time</td>
     </tr>
 </table>
 </body>
