--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>This is my first webpage</title>
 </head>
 <body>
 <h1>this is my first webpage in 2017 @ RGU Aberdeen</h1>
