--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is my first webpage</title>
+    <title>home</title>
 </head>
 <body>
 <h1>this is my first webpage in 2017 @ RGU Aberdeen</h1>
 <h2>Fredrick Muchila Muchila</h2>
 <h3>MY DREAM CAR IS A AUDI Q7</h3>
-    <h3> this is just a test</h3>
+    
 
 </body>
 </html>
